syntax = "proto3";

package auth;

option go_package = "api/auth";

// AuthService

service AuthService {
    rpc Deregister(DeregisterRequest) returns (DeregisterResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc User(UserRequest) returns (UserResponse) {}
    rpc Verify(VerifyRequest) returns (VerifyResponse) {}
}

// Models

message User {
    string email = 1;
    string password = 2;
    string verifiedAt = 3;
    int32 id = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

// Transports

message DeregisterRequest {
    string userID = 1;
}

message DeregisterResponse {
    User user = 1;
    string err = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    User user = 1;
    string err = 2;
}

message UserRequest {
    string userID = 1;
}

message UserResponse {
    User user = 1;
    string err = 2;
}

message VerifyRequest {
    string email = 1;
    string password = 2;
}

message VerifyResponse {
    User user = 1;
    string err = 2;
}
